<resources>
    <string name="app_name">Teachme App</string>
    <string name="brand">Teachme App</string>
    <string name="google_server_client_id" translatable="false">291393125668-adhjrrv3j4ajcl1rp6t5sf03n993uj9k.apps.googleusercontent.com</string>
    <string name="facebook_app_id">282886746252426</string>
    <string name="fb_login_protocol_scheme">fb282886746252426</string>
    <string name="digits" translatable="false">0123456789</string>
    <string name="onboarding_slide1_title">Looking for a tutor? </string>
    <string name="onboarding_slide1_desc">Get the best tutoring from our wide range of Peer tutors!</string>
    <string name="onboarding_slide2_title">Book your lesson Today!</string>
    <string name="onboarding_slide2_desc">Book your lesson now and start learning.</string>
    <string name="onboarding_slide3_title">Become a tutor and EARN!!!</string>
    <string name="onboarding_slide3_desc">Become a peer Tutor and start earning.</string>
    <string name="start_learning_now">TeachMe App</string>
    <string name="sign_in_up_page_desc">Peer Tutoring Platform</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="skip_login">Skip login</string>
    <string name="welcome_back">Welcome back!✌️</string>
    <string name="forget_password_emoji">Forget Password✌️</string>
    <string name="sign_in_desc">Login to your account and enjoy learning…</string>
    <string name="email_or_phone">Email</string>
    <string name="password">Password</string>
    <string name="terms_and_services">By using our services, you agree to our Terms &amp; Policies</string>
    <string name="donnot_have_account">Don\'t have an account?</string>
    <string name="forget_password">Forget Password</string>
    <string name="create_account">Create account✌</string>
    <string name="sign_up_desc">Join us now and start learning and tutoring</string>
    <string name="create_an_account">Create an account</string>
    <string name="retype_password">Retype Password</string>
    <string name="sign_in">Sign in</string>
    <string name="have_an_account">Have an account?</string>
    <string name="invalid_username_password">Invalid username or password! Try again…</string>
    <string name="select_country">Select a country</string>
    <string name="phone_number">Phone Number</string>
    <string name="search_country_code">Search a country or code</string>
    <string name="cancel">Cancel</string>
    <string name="select_lang">Select a language</string>
    <string name="account_verification">Account verification✌</string>
    <string name="account_verification_desc">Insert the verification code that sent to you…</string>
    <string name="verify_my_account">Verify my account</string>
    <string name="invalid_verification_code">Invalid verification code! Try again…</string>
    <string name="code_not_received">Haven\'t received the code?</string>
    <string name="resend_code">Resend code</string>
    <string name="categories">Courses</string>
    <string name="providers">Tutors</string>
    <string name="blog">Blog</string>
    <string name="my_classes">My Courses</string>
    <string name="my_classes_small">My Courses</string>
    <string name="home">Home</string>
    <string name="yes">Yes</string>
    <string name="delete">Delete</string>
    <string name="exit">Exit</string>
    <string name="exit_desc">Are you sure you want to exit?</string>
    <string name="ok">OK</string>
    <string name="finalize_your_account">Finalize your account</string>
    <string name="your_name">Your Name</string>
    <string name="referral_code">Referral Code</string>
    <string name="_continue">Continue</string>
    <string name="dashboard">Dashboard</string>
    <string name="classes">Courses</string>
    <string name="meetings">Meetings</string>
    <string name="quizzes">Quizzes</string>
    <string name="certificates">Certificates</string>
    <string name="favorites">Favorites</string>
    <string name="comments">Comments</string>
    <string name="financial">Wallet</string>
    <string name="support">Support</string>
    <string name="subscription">Subscription</string>
    <string name="featured_classes">Featured Courses</string>
    <string name="newest_classes">Newest Courses</string>
    <string name="view_all">View All</string>
    <string name="best_rated">Best Rated</string>
    <string name="best_selling">Best Selling</string>
    <string name="discounted_classes">Discounted Courses</string>
    <string name="free_classes">Free Courses</string>
    <string name="save">Save</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="language">Language</string>
    <string name="referral_url">Referral URL</string>
    <string name="join_newsletter">Join newsletter</string>
    <string name="closed">Closed</string>
    <string name="new_support_message">New Support Message</string>
    <string name="subject">Subject</string>
    <string name="select_class">Select Course</string>
    <string name="send">Send</string>
    <string name="message_body">Message Body</string>
    <string name="close">Close</string>
    <string name="reply">Reply</string>
    <string name="attachment">Attachment</string>
    <string name="close_ticket_desc">Are you sure to close this ticket?</string>
    <string name="cannot_open_this_file">No viewer found for this file!</string>
    <string name="downloading">Downloading…</string>
    <string name="loading">Loading…</string>
    <string name="next">Next</string>
    <string name="get_started">Get started</string>
    <string name="skip">Skip</string>
    <string name="successful_payment">Successful Payment</string>
    <string name="successful_payment_desc">The payment was successful.</string>
    <string name="failed_payment">Payment Failed</string>
    <string name="failed_payment_desc">The payment was not successful.</string>
    <string name="remove">Remove</string>
    <string name="month_sales">Month Sales</string>
    <string name="notices">Notices</string>
    <string name="remained_days">Remained Days</string>
    <string name="remained_downloads">Remained Downloads</string>
    <string name="active_plan">Active Plan</string>
    <string name="select_a_plan">Select a Plan</string>
    <string name="download">Download</string>
    <string name="share">Share</string>
    <string name="mid_term_exam">Mid-term Exam</string>
    <string name="share_certificate">Share Certificate</string>
    <string name="share_certificate_desc">You can share this certificate using social networks and encourage others to learn.</string>
    <string name="your_grade">Your Grade</string>
    <string name="pass_grade">Pass Grade</string>
    <string name="taken_date">Taken Date</string>
    <string name="cert_id">Certificate ID</string>
    <string name="latest_std">Latest Students</string>
    <string name="meeting_options">Meeting Options</string>
    <string name="finish_meeting">Finish meeting</string>
    <string name="add_to_calendar">Add to calendar</string>
    <string name="status">Status</string>
    <string name="amount">Amount</string>
    <string name="start_date">Start Date</string>
    <string name="duration">Duration</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="meeting_join_details">Meeting Join Details</string>
    <string name="join_url">Join URL</string>
    <string name="password_optional">Password (Optional)</string>
    <string name="report">Report</string>
    <string name="start">Start</string>
    <string name="total_mark">Total Mark</string>
    <string name="pass_mark">Pass Mark</string>
    <string name="attempts">Attempts</string>
    <string name="time">Time</string>
    <string name="previous">Previous</string>
    <string name="type_your_answer">Type your answer here</string>
    <string name="charge">Charge</string>
    <string name="account_balance">Account Balance</string>
    <string name="balances_history">Balances History</string>
    <string name="pay">Pay</string>
    <string name="charge_amount">Charge Amount</string>
    <string name="offline_payment_details">Offline Payment Details</string>
    <string name="reference">Reference</string>
    <string name="submit">Submit</string>
    <string name="bank_info">Bank Info</string>
    <string name="payout_request">Payout Request</string>
    <string name="card_id">Card ID</string>
    <string name="account">Account</string>
    <string name="iban">IBAN</string>
    <string name="quiz_review">Quiz Review</string>
    <string name="question">Question</string>
    <string name="webinar_overview">Live Class Overview</string>
    <string name="view_webinar_page">Live Class Page</string>
    <string name="class_id">Class ID</string>
    <string name="category">Category</string>
    <string name="sessions">Sessions</string>
    <string name="sales">Sales</string>
    <string name="students">Students</string>
    <string name="next_session_date">Next Session Date</string>
    <string name="next_session_duration">Next Session Duration</string>
    <string name="class_sales">Class Sales</string>
    <string name="meeting_sales">Meeting Sales</string>
    <string name="total_sales">Total Sales</string>
    <string name="sales_history">Sales History</string>
    <string name="trending">Trending</string>
    <string name="browse_categories">Browse categories</string>
    <string name="filters">Filters</string>
    <string name="options">Options</string>
    <string name="apply_options">Apply options</string>
    <string name="upcoming_classes">Upcoming Live Classes</string>
    <string name="downloadable_content">Downloadable content</string>
    <string name="sort_by">Sort by</string>
    <string name="best_sellers">Best Sellers</string>
    <string name="all">All</string>
    <string name="newest">Newest</string>
    <string name="highest_price">Highest Price</string>
    <string name="lowest_price">Lowest Price</string>
    <string name="level">Level</string>
    <string name="type">Type</string>
    <string name="live">Live</string>
    <string name="course">Course</string>
    <string name="what_are_u_going_to_find">Search for tutor by name or course</string>
    <string name="suggested">Suggested</string>
    <string name="easiest_way_to_learn">Accessible Learning</string>
    <string name="make_sure_passwords_are_the_same">Make sure passwords are the same.</string>
    <string name="error">Error</string>
    <string name="forget_password_desc">Don\'t be worried, your password will reset.</string>
    <string name="reset_password">Reset password</string>
    <string name="sign_in_failed">Sign in failed!</string>
    <string name="no_email_associated_with_this_account">There\'s no email associated with this account</string>
    <string name="sign_in_canceled">Sign in canceled</string>
    <string name="minutes">Minutes</string>
    <string name="hours">Hours</string>
    <string name="courses">Courses</string>
    <string name="off">Off</string>
    <string name="users">Users</string>
    <string name="organizations">Organizations</string>
    <string name="results_found_for">Results found for</string>
    <string name="filter_items">Filter items</string>
    <string name="_in">in</string>
    <string name="_in_captical">In</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="one">1</string>
    <string name="more_options">More options</string>
    <string name="show_only_subscribe">Show only subscribe</string>
    <string name="show_only_certificate_included">Show only certificate included</string>
    <string name="show_only_courses_with_quiz">Show only courses with quiz</string>
    <string name="Show_only_featured_courses">Show only featured courses</string>
    <string name="live_class">Live class</string>
    <string name="text_lessson">Text course</string>
</resources>