<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/courseOptionsCancelBtn"
            android:layout_width="@dimen/btn_height"
            android:layout_height="@dimen/btn_height"
            android:layout_gravity="top|end"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            android:background="@drawable/round_view_white_corner20"
            android:clickable="true"
            android:focusable="true"
            android:foreground="@drawable/ripple_effect_circular"
            android:padding="15dp"
            app:layout_constraintEnd_toStartOf="@+id/signUpEmailPhoneEdtx"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpFacebookLayout"
            app:srcCompat="@drawable/ic_x_black" />

    </FrameLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:fadeScrollbars="false"
        android:fillViewport="true"
        android:scrollbarThumbVertical="@color/gray81"
        android:paddingTop="@dimen/margin_4"
        android:scrollbars="vertical"
        android:background="@drawable/round_view_white_top_corner30">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:layout_marginTop="@dimen/margin_24"
                android:fontFamily="@font/bold"
                android:text="@string/type"
                android:textColor="@color/text_color5"
                android:textSize="@dimen/textsize_20d"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/courseOptionsLiveClassChbx"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:fontFamily="@font/regular"
                android:text="@string/live_class"
                android:paddingStart="@dimen/margin_8"
                android:paddingEnd="@dimen/margin_8"
                app:useMaterialThemeColors="false"
                android:button="@drawable/chbx_button_bg"
                android:textColor="@color/text_color5" />


            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/courseOptionsCourseChbx"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/margin_8"
                android:paddingEnd="@dimen/margin_8"
                app:useMaterialThemeColors="false"
                android:button="@drawable/chbx_button_bg"
                android:layout_marginTop="@dimen/margin_16"
                android:fontFamily="@font/regular"
                android:text="@string/course"
                android:textColor="@color/text_color5" />


            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/courseOptionsTextLessonChbx"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:paddingStart="@dimen/margin_8"
                android:paddingEnd="@dimen/margin_8"
                app:useMaterialThemeColors="false"
                android:button="@drawable/chbx_button_bg"
                android:backgroundTint="@color/accent"
                android:fontFamily="@font/regular"
                android:text="@string/text_lessson"
                android:textColor="@color/text_color5" />


            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:layout_marginTop="@dimen/margin_24"
                android:fontFamily="@font/bold"
                android:text="@string/options"
                android:textColor="@color/text_color5"
                android:textSize="@dimen/textsize_20d"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/courseOptionsUpcomingClassesSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:shadowDx="50"
                android:elevation="1dp"
                android:fontFamily="@font/regular"
                android:text="@string/upcoming_classes"
                android:textColor="@color/text_color5"
                android:textSize="@dimen/textsize_14d"
                android:thumb="@drawable/switch_custom_thumb"
                app:track="@drawable/switch_custom_track"
                app:useMaterialThemeColors="false" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/courseOptionsFreeClassesSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:checked="false"
                android:elevation="1dp"
                android:fontFamily="@font/regular"
                android:text="@string/free_classes"
                android:textColor="@color/text_color5"
                android:textSize="@dimen/textsize_14d"
                android:thumb="@drawable/switch_custom_thumb"
                app:track="@drawable/switch_custom_track"
                app:useMaterialThemeColors="false" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/courseOptionsDiscountedClassesSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:checked="false"
                android:elevation="1dp"
                android:fontFamily="@font/regular"
                android:text="@string/discounted_classes"
                android:textColor="@color/text_color5"
                android:textSize="@dimen/textsize_14d"
                android:thumb="@drawable/switch_custom_thumb"
                app:track="@drawable/switch_custom_track"
                app:useMaterialThemeColors="false" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/courseOptionsDownloadableContentSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:checked="false"
                android:elevation="1dp"
                android:fontFamily="@font/regular"
                android:text="@string/downloadable_content"
                android:textColor="@color/text_color5"
                android:textSize="@dimen/textsize_14d"
                android:thumb="@drawable/switch_custom_thumb"
                app:track="@drawable/switch_custom_track"
                app:useMaterialThemeColors="false" />


            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:layout_marginTop="@dimen/margin_16"
                android:fontFamily="@font/bold"
                android:text="@string/sort_by"
                android:textColor="@color/text_color5"
                android:textSize="@dimen/textsize_20d"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <RadioGroup
                android:id="@+id/courseOptionsSortRg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/courseOptionsAllRd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:button="@drawable/rd_button_bg"
                    android:checked="true"
                    android:elevation="10dp"
                    android:fontFamily="@font/regular"
                    android:paddingStart="@dimen/margin_10"
                    android:text="@string/all"
                    android:textColor="@color/text_color5"
                    android:textSize="@dimen/textsize_14d"
                    app:useMaterialThemeColors="false" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/courseOptionsNewsetRd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16"
                    android:background="@null"
                    android:button="@drawable/rd_button_bg"
                    android:checked="false"
                    android:elevation="10dp"
                    android:fontFamily="@font/regular"
                    android:paddingStart="@dimen/margin_10"
                    android:text="@string/newest"
                    android:textColor="@color/text_color5"
                    android:textSize="@dimen/textsize_14d"
                    app:useMaterialThemeColors="false" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/courseOptionsHighestPriceRd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16"
                    android:background="@null"
                    android:button="@drawable/rd_button_bg"
                    android:checked="false"
                    android:elevation="10dp"
                    android:fontFamily="@font/regular"
                    android:paddingStart="@dimen/margin_10"
                    android:text="@string/highest_price"
                    android:textColor="@color/text_color5"
                    android:textSize="@dimen/textsize_14d"
                    app:useMaterialThemeColors="false" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/courseOptionsLowestPriceRd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16"
                    android:background="@null"
                    android:button="@drawable/rd_button_bg"
                    android:checked="false"
                    android:elevation="10dp"
                    android:fontFamily="@font/regular"
                    android:paddingStart="@dimen/margin_10"
                    android:text="@string/lowest_price"
                    android:textColor="@color/text_color5"
                    android:textSize="@dimen/textsize_14d"
                    app:useMaterialThemeColors="false" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/courseOptionsBestSellersRd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16"
                    android:background="@null"
                    android:button="@drawable/rd_button_bg"
                    android:checked="false"
                    android:elevation="10dp"
                    android:fontFamily="@font/regular"
                    android:paddingStart="@dimen/margin_10"
                    android:text="@string/best_sellers"
                    android:textColor="@color/text_color5"
                    android:textSize="@dimen/textsize_14d"
                    app:useMaterialThemeColors="false" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/courseOptionsBestRatedRd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16"
                    android:background="@null"
                    android:button="@drawable/rd_button_bg"
                    android:checked="false"
                    android:elevation="10dp"
                    android:fontFamily="@font/regular"
                    android:paddingStart="@dimen/margin_10"
                    android:text="@string/best_rated"
                    android:textColor="@color/text_color5"
                    android:textSize="@dimen/textsize_14d"
                    app:useMaterialThemeColors="false" />

            </RadioGroup>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:layout_marginTop="@dimen/margin_24"
                android:fontFamily="@font/bold"
                android:text="@string/more_options"
                android:textColor="@color/text_color5"
                android:textSize="@dimen/textsize_20d"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/courseOptionsShowOnlySubscribeChbx"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:paddingStart="@dimen/margin_8"
                android:paddingEnd="@dimen/margin_8"
                app:useMaterialThemeColors="false"
                android:button="@drawable/chbx_button_bg"
                android:fontFamily="@font/regular"
                android:text="@string/show_only_subscribe"
                android:textColor="@color/text_color5" />


            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/courseOptionsShowOnlyCertificateIncludedChbx"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:paddingStart="@dimen/margin_8"
                android:paddingEnd="@dimen/margin_8"
                app:useMaterialThemeColors="false"
                android:button="@drawable/chbx_button_bg"
                android:fontFamily="@font/regular"
                android:text="@string/show_only_certificate_included"
                android:textColor="@color/text_color5" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/courseOptionsShowOnlyCoursesWithQuizChbx"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:paddingStart="@dimen/margin_8"
                android:paddingEnd="@dimen/margin_8"
                app:useMaterialThemeColors="false"
                android:button="@drawable/chbx_button_bg"
                android:fontFamily="@font/regular"
                android:text="@string/show_only_courses_with_quiz"
                android:textColor="@color/text_color5" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/courseOptionsShowOnlyFeaturedCoursesChbx"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/margin_16"
                android:paddingEnd="@dimen/margin_8"
                app:useMaterialThemeColors="false"
                android:button="@drawable/chbx_button_bg"
                android:layout_marginTop="@dimen/margin_16"
                android:fontFamily="@font/regular"
                android:text="@string/Show_only_featured_courses"
                android:textColor="@color/text_color5" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/courseOptionsApplyBtn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginBottom="@dimen/margin_16"
                android:fontFamily="@font/regular"
                android:text="@string/apply_options"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize_15d"
                app:backgroundTint="@color/accent"
                app:cornerRadius="@dimen/btn_corner_radius"
                app:rippleColor="@color/rippleColor"
                tools:ignore="SpUsage" />


        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

</LinearLayout>